--- a/css/produto.css
+++ b/css/produto.css
@@ -1,3 +1,17 @@
+.cores label::after {
+  box-sizing: border-box;
+  position: absolute;
+  top: 30px;
+  border: 6px solid rgba(0, 0, 0, 0);
+  transition: 1s;
+  content: "";
+  cursor: pointer;
+}
+
+.cores label:hover::after {
+  border: 6px solid rgba(0, 0, 0, 0.1);
+}
+
 .cores {
   position: relative;
   padding-top: 90px;
@@ -20,6 +34,11 @@
 }
 
 .cores label img {
+  display: block;
+  max-width: 100%;
+}
+
+.produto {
   color: #333;
   line-height: 1.3;
   margin-top: 2em;
@@ -54,16 +73,12 @@
   margin: 1em 0;
 }
 
-.cores label::after {
-  box-sizing: border-box;
-  position: absolute;
-  top: 30px;
-  border: 6px solid rgba(0, 0, 0, 0);
-  transition: 1s;
-}
-
 .cores input[type=radio] {
   display: none;
+}
+
+.cores input:checked + label img {
+  display: block;
 }
 
 .cores input:not(:checked) + label img {
