--- a/css/produto.css
+++ b/css/produto.css
@@ -36,6 +36,12 @@
   margin-top: 2em;
 }
 
+.produto {
+  color: #333;
+  line-height: 1.3;
+  margin-top: 2em;
+}
+
 .produto h1 {
   font-size: 1.8em;
   font-weight: bold;
