--- a/css/produto.css
+++ b/css/produto.css
@@ -92,7 +92,47 @@ label[for=azul]::after {
   left: 120px;
 }
 
-@media (min-widht: 630px) {
+.detalhes {
+  padding: 2em 0;
+}
+
+.detalhes h2 {
+  font-size: 1.5em;
+  line-height: 2;
+}
+
+.detalhes p {
+  margin: 1em 0;
+  font-size: 1em;
+  line-height: 1.5;
+  max-width: 36em;
+}
+
+table {
+  border-spacing: 0.2em;
+  border-collapse: separate;
+}
+
+thead {
+  background-color: #999;
+}
+
+thead th {
+  font-weight: bold;
+  padding: 0.3em 1em;
+  text-align: center;
+}
+
+td {
+  padding: 0.3em;
+}
+@media (min-width: 500px) {
+  .detalhes {
+    font-size: 1.2em;
+  }
+}
+
+@media (min-width: 630px) {
   .produto {
     position: relative;
     padding-left: 40%;
@@ -118,5 +158,21 @@ label[for=azul]::after {
   .cores label:after {
     position: static;
     float: left;
+  }
+
+  .produto {
+    font-size: 1.2em;
+  }
+
+  .cores label::after {
+    margin-right: 10px;
+  }
+
+  fieldset {
+    display: inline-block;
+    vertical-align: top;
+    margin: 1em 0;
+    min-width: 240px;
+    width: 45%;
   }
 }
