--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,28 @@
 
 .destaque {
     margin-top: 10px;
+    position: relative;
+}
+
+.pause,
+.play {
+    display: block;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+}
+
+.pause {
+    border-left: 10px solid #900;
+    border-right: 10px solid #900;
+    height: 30px;
+    width: 5px;
+}
+
+.play {
+    border-left: 25px solid #900;
+    border-bottom: 15px solid transparent;
+    border-top: 15px solid transparent;
 }
 
 .painel {
@@ -141,6 +163,7 @@
     margin: 2px;
     padding-bottom: 10px;
     transition: 0.7s ease-out;
+    padding-left: 10px;
 }
 
 .painel li:hover {
@@ -160,7 +183,7 @@
     text-transform: uppercase;
     margin-bottom: 10px;
     text-shadow: 3px 3px 2px rgba(255, 255, 255, 0.8);
-
+    
 }
 
 .painel a {
